force-app/main/default/objects/cf123__Field__c/cf123__Field__c.object-meta.xml
<CustomObject>
    <label>Form Field</label>
    <nameField>
        <label>External Field Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Form Fields</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>