force-app/main/default/objects/cf123__Field__c/fields/cf123__Form__c.field-meta.xml
<CustomField>
    <fullName>cf123__Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Form</label>
    <referenceTo>cf123__Form__c</referenceTo>
    <relationshipName>Fields</relationshipName>
    <type>Lookup</type>
</CustomField>