force-app/main/default/objects/cf123__Field__c/fields/cf123__Label__c.field-meta.xml
<CustomField>
    <fullName>cf123__Label__c</fullName>
    <label>Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>