force-app/main/default/objects/cf123__Field__c/fields/cf123__Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>cf123__Object_API_Name__c</fullName>
    <label>Object API Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>