force-app/main/default/objects/cf123__Field__c/fields/cf123__Survey__c.field-meta.xml
<CustomField>
    <fullName>cf123__Survey__c</fullName>
    <formula>ISBLANK( cf123__Api_Name__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Survey</label>
    <type>Checkbox</type>
</CustomField>